# rag

app1/: .gitignore  README.md  __init__.py  client_example.py  docker-compose.yml  example.py  main.py  manage_collections.py  pyproject.toml
app1/api/: router.py  schemas.py
app1/core/: config.py  logger.py
app1/preproces/: parser.py  preprocessing.py
app1/search/: fusion.py
app1/service/: embedding_service.py  milvus_service.py  rag_service.py  reranker_service.py  sparse_embedding_service.py  vector_search_service.py
volumes/etcd/member/snap/: db
volumes/milvus/rdb_data/: 000011.sst  IDENTITY  LOG  LOG.old.1764678831102606  MANIFEST-000012
volumes/milvus/rdb_data_meta_kv/: 000009.sst  IDENTITY  LOG  LOG.old.1764678830975649  MANIFEST-000010
volumes/minio/.minio.sys/: format.json
volumes/minio/a-bucket/files/insert_log/462599474682268980/462599474682268981/462599474682469847/103/462599967548637417/578efcff-b56a-471a-bbe4-8b3e6026c8ff/: part.1
volumes/minio/a-bucket/files/insert_log/462599474682268980/462599474682268981/462599474682469847/104/462599967548637418/6d6b30f5-8ec7-4f23-bdb4-07df3513a9a8/: part.1
volumes/redis/appendonlydir/: appendonly.aof.1.base.rdb
