[tool.poetry]
name = "rag-system"
version = "0.1.0"
description = "RAG System with Milvus, FastAPI, and AI embeddings"
authors = ["Madikhan77 <69909378+Madikhan77@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "app1"}]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.12"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.13.2"
aiosignal = "1.4.0"
alembic = "1.17.1"
amqp = "5.3.1"
annotated-doc = "0.0.4"
annotated-types = "0.7.0"
anyio = "3.7.1"
asttokens = "3.0.0"
asyncpg = "0.30.0"
attrs = "25.4.0"
bcrypt = "5.0.0"
billiard = "4.2.2"
black = "25.11.0"
celery = "5.5.3"
certifi = "2025.11.12"
cffi = "2.0.0"
charset-normalizer = "3.4.4"
click = "8.3.0"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1.2"
click-repl = "0.3.0"
colorama = "0.4.6"
comm = "0.2.3"
cryptography = "46.0.3"
dataclasses-json = "0.6.7"
debugpy = "1.8.17"
decorator = "5.2.1"
distro = "1.9.0"
dnspython = "2.8.0"
ecdsa = "0.19.1"
email-validator = "2.3.0"
executing = "2.2.1"
fastapi = "0.121.2"
filelock = "3.19.1"
flake8 = "7.3.0"
FlagEmbedding = "1.2.11"
frozenlist = "1.8.0"
fsspec = "2025.9.0"
granian = "2.5.7"
greenlet = "3.2.4"
grpcio = "1.76.0"
h11 = "0.16.0"
httpcore = "1.0.9"
httptools = "0.7.1"
httpx = "0.28.1"
huggingface-hub = "0.36.0"
idna = "3.11"
iniconfig = "2.3.0"
ipykernel = "7.1.0"
ipython = "9.7.0"
ipython-pygments-lexers = "1.1.1"
jedi = "0.19.2"
Jinja2 = "3.1.6"
jiter = "0.12.0"
joblib = "1.5.2"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
jupyter-client = "8.6.3"
jupyter-core = "5.9.1"
kombu = "5.5.4"
langchain = "0.1.14"
langchain-community = "0.0.38"
langchain-core = "0.1.52"
langchain-openai = "0.1.3"
langsmith = "0.1.52"
Mako = "1.3.10"
MarkupSafe = "2.1.5"
marshmallow = "3.26.1"
matplotlib-inline = "0.2.1"
mccabe = "0.7.0"
mpmath = "1.3.0"
multidict = "6.7.0"
mypy-extensions = "1.1.0"
nest-asyncio = "1.6.0"
networkx = "3.5"
numpy = "1.26.4"
openai = "1.109.1"
orjson = "3.11.4"
ormsgpack = "1.12.0"
packaging = "23.2"
pandas = "2.3.3"
parso = "0.8.5"
passlib = "1.7.4"
pathspec = "0.12.1"
peft = "0.13.2"
pillow = "11.3.0"
platformdirs = "4.5.0"
pluggy = "1.6.0"
prompt-toolkit = "3.0.52"
propcache = "0.4.1"
protobuf = "6.33.1"
psutil = "7.1.3"
pure-eval = "0.2.3"
pyasn1 = "0.6.1"
pycodestyle = "2.14.0"
pycparser = "2.23"
pydantic = "2.12.4"
pydantic-settings = "2.12.0"
pydantic-core = "2.41.5"
pyflakes = "3.4.0"
Pygments = "2.19.2"
PyJWT = "2.10.1"
pymilvus = "2.6.3"
pytest = "9.0.1"
pytest-asyncio = "1.3.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.2.1"
python-jose = "3.5.0"
python-multipart = "0.0.20"
pytokens = "0.3.0"
pytz = "2025.2"
PyYAML = "6.0.3"
pyzmq = "27.1.0"
rank-bm25 = "0.2.2"
redis = "7.0.1"
regex = "2025.11.3"
requests = "2.32.5"
requests-toolbelt = "1.0.0"
rsa = "4.9.1"
safetensors = "0.6.2"
scikit-learn = "1.7.2"
scipy = "1.16.3"
setuptools = "70.2.0"
six = "1.17.0"
sniffio = "1.3.1"
SQLAlchemy = "2.0.44"
stack-data = "0.6.3"
starlette = "0.49.3"
sympy = "^1.14.0"
tenacity = "8.5.0"
threadpoolctl = "3.6.0"
tiktoken = "0.12.0"
tokenizers = "0.15.1"
tornado = "6.5.2"
torch = {version = "2.3.1", source = "pytorch-gpu"}
tqdm = "4.67.1"
traitlets = "5.14.3"
transformers = "4.38.2"
typing-inspect = "0.9.0"
typing-inspection = "0.4.2"
typing-extensions = "4.15.0"
torchvision = {version = "0.18.1", source = "pytorch-gpu"}
tzdata = "2025.2"
urllib3 = "2.5.0"
uvicorn = "0.38.0"
vine = "5.1.0"
watchfiles = "1.1.1"
wcwidth = "0.2.14"
websockets = "15.0.1"
xxhash = "3.6.0"
yarl = "1.22.0"
zstandard = "0.25.0"
docx = "^0.2.4"
openpyxl = "^3.1.5"
pypdf = "^6.3.0"
hf-xet = "^1.2.0"
python-docx = "^1.2.0"

[tool.poetry.scripts]
rag-cli = "app1.manage_collections:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
